Bug 124730 - Writer Crashes when Creating New Style
Summary: Writer Crashes when Creating New Style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.2.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks: GTK3 Writer-Styles
  Show dependency treegraph
 
Reported: 2019-04-14 09:15 UTC by Kevin Suo
Modified: 2019-04-28 14:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["libglib-2.0.so.0.5600.3"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2019-04-14 09:15:06 UTC
This bug was filed from the crash reporting server and is br-6387a5fe-15d7-4d9d-8d43-4ed97c923fc6.
=========================================

On the style creation dialog, Writer crashes when I have typed a name for the style and trying to switch to another tab.

Steps to Reproduce:

1. Goto style sidebar, right-click on the default style and select "New";
2. Type in a new name for the style in "Manage" tab, and try to switch any other tab. Writer crashes.

版本: 6.2.2.2
Build ID: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
CPU 线程: 4; 操作系统: Linux 4.18; UI 渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded

Ubuntu 18.04.2 LTS X64.
Comment 1 Oliver Brinzing 2019-04-14 10:50:04 UTC
not reproducible with:

Version: 6.2.3.1 (x64)
Build-ID: 9ba025bafb03b962c34687cf87806cc03a3a7436
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

Version: 6.3.0.0.alpha0+ (x64)
Build ID: d644a561eeb3e6ceb943819895a40c461effdbe6
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

maybe linux only?

To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 2 Kevin Suo 2019-04-14 11:54:45 UTC
(In reply to Oliver Brinzing from comment #1)
Re-setting user-profile does not solve the problem.
Comment 3 Xisco Faulí 2019-04-14 18:52:18 UTC
Could you please share the gtk version you're using ?

-> dpkg -l libgtk* | grep -e '^i' | grep -e 'libgtk-*[0-9]'
Comment 4 Kevin Suo 2019-04-15 10:09:07 UTC
(In reply to Xisco Faulí from comment #3)

$ dpkg -l libgtk* | grep -e '^i' | grep -e 'libgtk-*[0-9]'
ii  libgtk-3-0:amd64             3.22.30-1ubuntu1 amd64        GTK+ graphical user interface library
ii  libgtk-3-bin                 3.22.30-1ubuntu1 amd64        programs for the GTK+ graphical user interface library
ii  libgtk-3-common              3.22.30-1ubuntu1 all          common files for the GTK+ graphical user interface library
ii  libgtk2.0-0:amd64            2.24.32-1ubuntu1 amd64        GTK+ graphical user interface library
ii  libgtk2.0-bin                2.24.32-1ubuntu1 amd64        programs for the GTK+ graphical user interface library
ii  libgtk2.0-cil                2.12.40-2        amd64        CLI binding for the GTK+ toolkit 2.12
ii  libgtk2.0-cil-dev            2.12.40-2        amd64        CLI binding for the GTK+ toolkit 2.12
ii  libgtk2.0-common             2.24.32-1ubuntu1 all          common files for the GTK+ graphical user interface library
ii  libgtk2.0-dev                2.24.32-1ubuntu1 amd64        development files for the GTK+ library
ii  libgtk2.0-doc                2.24.32-1ubuntu1 all          documentation for the GTK+ graphical user interface library
Comment 5 Kevin Suo 2019-04-15 10:13:22 UTC
By the way, the operation which triggered the crash has the following output in terminal:

$ libreoffice6.2 

(soffice:27470): Gtk-CRITICAL **: 18:10:33.177: gtk_tree_model_iter_nth_child: assertion 'n >= 0' failed

(soffice:27470): Gtk-WARNING **: 18:10:33.322: GtkEntry - did not receive focus-out-event. If you
connect a handler to this signal, it must return
GDK_EVENT_PROPAGATE so the entry gets the event as well

If this is related to input method, I am using ibus-libpinyin.
Comment 6 Xisco Faulí 2019-04-15 10:16:27 UTC
Does it happen with a specific document or with any document ?
Comment 7 Kevin Suo 2019-04-15 10:37:53 UTC
(In reply to Xisco Faulí from comment #6)
It happens with a new empty document and any existing document.
Comment 8 Commit Notification 2019-04-15 20:25:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/32304eb0079079fe263b860573fa010656ab13c9%5E%21

tdf#124730 an attempt to remove entry that isn't there

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2019-04-15 20:40:10 UTC
fixed in master, backport to 6-2 in gerrit
Comment 10 Commit Notification 2019-04-15 22:28:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/e160a29333af39151bf4ea520e1cc9e184ac3a8f%5E%21

tdf#124730 an attempt to remove entry that isn't there

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Kevin Suo 2019-04-28 14:51:32 UTC
I can verify that this bug is fixed in:

版本: 6.2.4.0.0+
Build ID: d917d931f615796af7ab90d80a9cb9232cf5bcbc
CPU 线程: 4; 操作系统: Linux 4.18; UI 渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded