tdf#124730 an attempt to remove entry that isn't there

Change-Id: If382f0419c8ea0a3b99c85942c05ee1e5a627e76